# solid-state

./: .gitignore  LICENSE  README.md  setup.cfg
examples/: sandwich_stability.ipynb  umlip_neb_percolation_analysis.ipynb  workflow_MP.ipynb
solid_state/: nebtools.py  percolation.py  pipelines.py  thermodynamics.py
solid_state/data/: __init__.py  datasampler.py  utils.py
