[metadata]
name = solid_state
version = attr: solid_state._version.__version__
author = Artem Dembitskiy
author_email = art.dembitskiy@gmail.com
url = https://github.com/cmg-storion/solid_state
description = The library for studying key properties of solid-state battery materials.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = solid-state, electorlyte, batteries, Li-ion
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
zip_safe = True
include_package_data = True
python_requires = >=3.8
install_requires =
    numpy
    pandas
    tqdm
    mp-api
    pymatgen
    ase
    ions>=0.5.1
